<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/adSoyad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ad_soyad"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/numara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/numara"
            />

        <EditText
            android:id="@+id/sinif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAllCaps="true"
            android:focusedByDefault="true"
            android:hint="@string/sinif"

            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/kaydet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kaydet"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/sil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sil"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/getir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getir"
            android:textAllCaps="false" />
    </LinearLayout>


    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>